# pfe-scraper-dashboard

./: .gitignore  README.md  docker-compose.yml
scraper-main/: .gitignore  Dockerfile  README.md  api.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  webhook_notifier.py
scraper-main/SEO/: __init__.py  analyze.py  assets_analyzer.py  config.py
scraper-main/SEO/content/: analyzer.py
scraper-main/SEO/on_page/: analyzer.py
scraper-main/SEO/technical/: analyzer.py  assets.py  network.py
scraper-main/browser_pool/: __init__.py  browser_instance.py  browser_pool.py  context_pool.py  example_usage.py
scraper-main/extractors/: __init__.py  crawler.py  example_crawler.py  example_usage.py  homepage.py  models.py  product_detail.py  product_list.py  robots_parser.py  sitemap_parser.py  text_content.py
scraper-main/extractors/tests/: test_classify_by_depth.py  test_classify_sitemap_entries.py  test_classify_sitemap_name.py  test_fetch_and_parse_all_sitemaps.py  test_fetch_sitemap.py  test_homepage_crawler.py  test_is_slug.py  test_parse_sitemap_xml.py  test_robots_parser.py  (+2 more)
scraper-main/frontier/: README.md  __init__.py  domain_queue.py  example_ingestion.py  example_worker.py  frontier_manager.py  scheduler.py  url_store.py  worker_api.py
scraper-main/page_classifier/: __init__.py  classifier.py  example_usage.py  job_builder.py  models.py  pagination.py  signals.py
scraper-main/paginator/: __init__.py  constants.py  detection.py  paginator.py  utils.py
scraper-main/product_detection/: __init__.py  extractors.py  models.py  scorer.py  utils.py
(+22 files in other folders)
